fix navbar reponsive on mobile and tablet

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -118,6 +118,10 @@
 
 /* RESPONSIVE */
 @media (max-width: 768px) {
+  #navbar.expanded {
+    position: fixed;
+  }
+  
   .menu-icon {
     display: block;
   }
